src/main/java/com/example/jallowbooks/errors/ResourceNotFoundException.java
package com.example.jallowbooks.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}